--- a/sample/Vagrantfile
+++ b/sample/Vagrantfile
@@ -24,6 +24,8 @@ Vagrant.configure(2) do |config|
     vb.cpus = 1
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    config.vm.provision "shell", name:"Python PIP",  path: "../common/install-python-pip.sh"
+    config.vm.provision "shell", name:"Docker Compose",  path: "../common/install-docker-compose.sh"
   end
 
   # set up Docker in the new VM:
