--- a/sample/Vagrantfile
+++ b/sample/Vagrantfile
@@ -26,6 +26,8 @@ Vagrant.configure(2) do |config|
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     config.vm.provision "shell", name:"Python PIP",  path: "../common/install-python-pip.sh"
     config.vm.provision "shell", name:"Docker Compose",  path: "../common/install-docker-compose.sh"
+    config.vm.network "forwarded_port", guest: 8888, host: 7880 #Makes 8888 (http) in vagrant container fwded to 7880 localhost
+    config.vm.network "forwarded_port", guest: 8889, host: 7881 #Makes 8889 (https) in vagrant container fwded to 7881 localhost
   end
 
   # set up Docker in the new VM:
